Tracker/logs/backend.log

> sales-tax-tracker@1.0.0 dev:backend
> nodemon --exec ts-node -r tsconfig-paths/register src/server.ts

[33m[nodemon] 3.1.10[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): src/**/*[39m
[33m[nodemon] watching extensions: ts,js,json[39m
[32m[nodemon] starting `ts-node -r tsconfig-paths/register src/server.ts`[39m
/Users/johnliddy/sales-tax-tracker/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/server.ts(32,65): error TS18046: 'error' is of type 'unknown'.
src/server.ts(48,62): error TS18046: 'error' is of type 'unknown'.
src/server.ts(69,62): error TS18046: 'error' is of type 'unknown'.

    at createTSError (/Users/johnliddy/sales-tax-tracker/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/johnliddy/sales-tax-tracker/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/johnliddy/sales-tax-tracker/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/johnliddy/sales-tax-tracker/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/johnliddy/sales-tax-tracker/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1871:10
    at Object.require.extensions.<computed> [as .ts] (/Users/johnliddy/sales-tax-tracker/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1470:32)
    at Module._load (node:internal/modules/cjs/loader:1290:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 18046, 18046, 18046 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
